--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -32,10 +32,10 @@
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:text="@string/title_activity_navigation"
-                android:typeface="monospace"
                 android:textColor="#000"
                 android:textSize="25dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:typeface="monospace" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,57 +49,129 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp">
+                android:layout_marginRight="20dp"
+                android:orientation="vertical">
 
-                <EditText
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/bt_background"
                     android:gravity="center"
-                    android:hint="Enter Name"
-                    android:inputType="textPersonName"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="13dp" />
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-                <EditText
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.85"
+                        android:src="@drawable/name" />
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="0.15"
+                        android:background="@drawable/bt_background"
+                        android:gravity="center"
+                        android:hint="Enter Name"
+                        android:inputType="textPersonName"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="13dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/bt_background"
                     android:gravity="center"
-                    android:hint="Enter Mobile No."
-                    android:inputType="number"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="13dp" />
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-                <EditText
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.85"
+                        android:src="@drawable/mobile" />
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="0.15"
+                        android:background="@drawable/bt_background"
+                        android:gravity="center"
+                        android:hint="Enter Mobile No."
+                        android:inputType="number"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="13dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:background="@drawable/bt_background"
                     android:gravity="center"
-                    android:hint="Enter Password"
-                    android:inputType="textPassword"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="13dp" />
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
-                <EditText
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.85"
+                        android:src="@drawable/pass" />
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="0.15"
+                        android:background="@drawable/bt_background"
+                        android:gravity="center"
+                        android:hint="Enter Password"
+                        android:inputType="textPassword"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="13dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:background="@drawable/bt_background"
                     android:gravity="center"
-                    android:hint="Enter Re Password"
-                    android:inputType="textPassword"
-                    android:textColor="#000"
-                    android:textColorHint="#000"
-                    android:textSize="13dp" />
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.85"
+                        android:src="@drawable/pass" />
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_weight="0.15"
+                        android:background="@drawable/bt_background"
+                        android:gravity="center"
+                        android:hint="Enter Re Password"
+                        android:inputType="textPassword"
+                        android:textColor="#000"
+                        android:textColorHint="#000"
+                        android:textSize="13dp" />
+
+                </LinearLayout>
 
                 <Button
                     android:layout_width="match_parent"
@@ -116,39 +188,39 @@
         </LinearLayout>
 
         <!--<LinearLayout-->
-            <!--android:gravity="center"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="0.90"-->
-            <!--android:orientation="vertical">-->
+        <!--android:gravity="center"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="0.90"-->
+        <!--android:orientation="vertical">-->
 
-            <!--<LinearLayout-->
-                <!--android:orientation="horizontal"-->
-                <!--android:background="#000"-->
-                <!--android:layout_marginBottom="10dp"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="2dp">-->
+        <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:background="#000"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="2dp">-->
 
-            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
 
-            <!--<TextView-->
-                <!--android:id="@+id/sign"-->
-                <!--android:text="Sign In"-->
-                <!--android:textColor="#000"-->
-                <!--android:gravity="center"-->
-                <!--android:textSize="22dp"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content" />-->
+        <!--<TextView-->
+        <!--android:id="@+id/sign"-->
+        <!--android:text="Sign In"-->
+        <!--android:textColor="#000"-->
+        <!--android:gravity="center"-->
+        <!--android:textSize="22dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
         <!--</LinearLayout>-->
 
         <LinearLayout
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.90"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_weight="0.90"
+            android:gravity="center"
             android:orientation="vertical">
 
             <Button
