--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -27,15 +27,13 @@
             android:layout_weight="0.3"
             />
 
-        <ImageView
+      <!--  <ImageView
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:src="@drawable/search_icon"
             android:background="@color/colorNavHedder"
             android:layout_gravity="center"
-            android:layout_weight="0.8"
-
-            />
+            android:layout_weight="0.8" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
