--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -9,33 +9,33 @@
 
         <item
             android:id="@+id/nav_homePage"
-            android:icon="@drawable/home_page"
+            android:icon="@drawable/homee"
             android:title="Home" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/profile_icon"
+            android:icon="@drawable/profilep"
             android:title="Profile" />
         <item
             android:id="@+id/nav_my_acti"
-            android:icon="@drawable/profile_icon"
+            android:icon="@drawable/myactii"
             android:title="My activities" />
 
         <item
             android:id="@+id/nav_fav"
-            android:icon="@drawable/favorite_icon"
+            android:icon="@drawable/fav"
             android:title="Fav" />
         <item
             android:id="@+id/nav_bookmark"
-            android:icon="@drawable/favorite_icon"
+            android:icon="@drawable/bookmarkk"
             android:title="Bookmark" />
 
         <item
             android:id="@+id/nav_share"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/shares"
             android:title="Share" />
         <item
             android:id="@+id/nav_contact"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/contactuss"
             android:title="Contact us" />
 
     </group>
@@ -44,7 +44,7 @@
         android:id="@+id/g2">
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/log"
                 android:title="Logout" />
     </group>
 
