--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,11 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:visible="false"
+        app:showAsAction="ifRoom"
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/search_icon"
+        android:title="@string/action_settings" />
+
+    <item
+        app:showAsAction="ifRoom"
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share"
+        android:title="share" />
 
 
     <item
