--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -25,7 +25,6 @@
 
        <LinearLayout
            android:layout_weight="0.45"
-
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
@@ -36,21 +35,21 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
-           <android.support.v7.widget.SearchView
-               android:layout_marginRight="8dp"
-               android:layout_marginLeft="8dp"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+               <SearchView
+                   android:id="@+id/searchView"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginRight="8dp"
+                   android:layout_marginLeft="8dp"
+                   android:queryHint="Search Here"
+                   android:iconifiedByDefault="false" />
 
-           </android.support.v7.widget.SearchView>
                </android.support.v7.widget.CardView>
 
        </LinearLayout>
 
-
        <LinearLayout
            android:layout_weight="0.10"
-
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
