--- a/app/src/main/res/layout/host_event_screen_fragment.xml
+++ b/app/src/main/res/layout/host_event_screen_fragment.xml
@@ -240,8 +240,7 @@
                     <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        >
+                        android:layout_margin="5dp">
 
                         <LinearLayout
                             android:weightSum="1"
@@ -261,7 +260,7 @@
                                 <de.hdodenhof.circleimageview.CircleImageView
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:id="@+id/profile_image"
-                                    android:layout_width="75dp"
+                                    android:layout_width="match_parent"
                                     android:layout_height="75dp"
                                     android:src="@drawable/girl"
                                     app:civ_border_width="1dp"
@@ -309,16 +308,15 @@
                                     android:layout_height="wrap_content" />
 
                                 <LinearLayout
-                                    android:weightSum="1"
+                                    android:weightSum="3"
                                     android:orientation="horizontal"
-                                    android:layout_margin="5dp"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
 
                                     <Button
                                         android:text="Accept"
                                         android:textAllCaps="false"
-                                        android:layout_weight="0.33"
+                                        android:layout_weight="1"
                                         android:textColor="#fff"
                                         android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
@@ -328,7 +326,7 @@
                                     <Button
                                         android:text="Reject"
                                         android:textAllCaps="false"
-                                        android:layout_weight="0.33"
+                                        android:layout_weight="1"
                                         android:textColor="#fff"
                                         android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
@@ -338,9 +336,8 @@
                                     <Button
                                         android:text="Hold"
                                         android:textAllCaps="false"
-                                        android:layout_weight="0.33"
+                                        android:layout_weight="1"
                                         android:textColor="#fff"
-                                        android:layout_marginRight="5dp"
                                         android:background="@drawable/bgcolor"
                                         android:layout_width="match_parent"
                                         android:layout_height="35dp" />
@@ -357,23 +354,19 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_gravity="bottom"
-            android:background="@color/colorNavHedder"
-            >
+            android:background="@color/colorNavHedder">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="1"
-                android:background="@color/colorNavHedder"
-
-                >
+                android:background="@color/colorNavHedder">
                 <LinearLayout
                     android:layout_weight="0.33"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -381,16 +374,14 @@
                         android:text="40"
                         android:textSize="15dp"
                         android:textColor="#fff"
-                        android:textAlignment="center"
-                        />
+                        android:textAlignment="center" />
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Accept"
                         android:textSize="15dp"
                         android:textColor="#fff"
-                        android:textAlignment="center"
-                        />
+                        android:textAlignment="center" />
                 </LinearLayout>
 
                 <LinearLayout
